--- a/web1/src/app/admin/company.component.html
+++ b/web1/src/app/admin/company.component.html
@@ -127,7 +127,7 @@
                                         </div>
                                         <div *ngIf="user?.UserGroup == 'SuperAdmin'" class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
                                             <mat-form-field class="example-full-width mb-0">
-                                                <mat-label>SRemark</mat-label>
+                                                <mat-label>Opticalguru remark</mat-label>
                                                 <input matInput name="SRemark" [(ngModel)]="data.SRemark" #SRemarkcontrol >
                                             </mat-form-field>
                                         </div>
