--- a/web1/src/app/admin/company-list.component.html
+++ b/web1/src/app/admin/company-list.component.html
@@ -6,13 +6,11 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-1 col-6 p-0 ms-3">
-                                    <h2>Company List</h2>
+                                <div class="col-xl-1 col-lg-2 col-md-3 col-8 p-0 ms-3">
+                                    <h2>Company List  <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button"
+                                        (click)="exportAsXLSX()"></i></h2>
                                 </div>
-                                <div class="ps-md-0 ps-1 pt-1" style="width: 40px;">
-                                    <i class="fa fa-file-excel-o" title="ExportAsXLSX" aria-hidden="true" type="button" (click)="exportAsXLSX()"></i>
-                                </div>
-                                <div class="col-md-1 col-1 ps-md-0 ps-1">
+                                <div class="col-md-1 col-3 ps-md-0 ps-1">
                                     <select class=" form-control"
                                         style="width: auto; border-radius: 22px; font-size: 10px !important; border: 2px solid #c3c3c3; box-shadow: inset 2px 2px 10px #adaaaad4;"
                                         [(ngModel)]="itemsPerPage" (change)="getList();">
@@ -33,39 +31,46 @@
                                 </div>
                                 <div class="col-md-2 col-4 ms-auto">
                                     <div class="input-group">
-                                        <input   placeholder="Search" [(ngModel)]="term" #searching  mdbInput type="search" id="form1" class="form-control" />
+                                        <input placeholder="Search" [(ngModel)]="term" #searching mdbInput type="search"
+                                            id="form1" class="form-control" />
                                     </div>
                                 </div>
                                 <div class="col-md-1 col-1" style="width: 70px;padding: 0;">
-                                    <mat-icon class="col-white plus_icon me-1" [routerLink]="['/admin/company',0]" > add</mat-icon>
-                                     <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview" title="Grid View" style="font-size: 22px;padding: 4px;">grid_on</mat-icon>                                     
+                                    <mat-icon class="col-white plus_icon me-1" [routerLink]="['/admin/company',0]">
+                                        add</mat-icon>
+                                    <mat-icon class="col-white Grid_icon" (click)="gridview = !gridview"
+                                        title="Grid View" style="font-size: 22px;padding: 4px;">grid_on</mat-icon>
                                 </div>
                             </div>
                         </div>
 
                         <!-- Grid View start -->
-                        <div class="row mt-5 mt-md-4" *ngIf="dataList?.length !== 0 && !gridview" style="overflow:auto;height:530px;">
-                            <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                        <div class="row mt-5 mt-md-4" *ngIf="dataList?.length !== 0 && !gridview"
+                            style="overflow:auto;height:530px;">
+                            <div class="col-xl-3 col-lg-4 col-md-6" *ngFor="let data of dataList let i = index;">
                                 <div class="course-card" style="height: 28rem;">
                                     <div class="course-card-body">
                                         <div class="course-card-top-overflow text-white">
-                                            <img [src]="data.PhotoURL " alt="Image"  class="mx-auto d-block cardImg" />
+                                            <img [src]="data.PhotoURL " alt="Image" class="mx-auto d-block cardImg" />
                                         </div>
                                         <h2 class="text-center m-0">{{data.Name}}</h2>
                                         <p class="text-center m-0">{{data.OwnerName}}</p>
                                         <p class="text-center m-0">{{data.MobileNo1}}</p>
                                         <p class="text-center m-0">{{data.Email}}</p>
                                         <p class="text-center m-0">{{data.CancellationDate }}</p>
-                                       
+
                                         <div class="text-center mb-3 mt-2">
-                                            <mat-icon class="sync_disabled me-1" title="Deactive" (click)="deactive(i)">sync_disabled</mat-icon>
-                                                <mat-icon class="swap_icon me-1" title="companylogin" (click)="companylogin(i)">swap_vert</mat-icon>
-                                                <i class="fas fa-info-circle" title="Edit"
-                                                    style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
-                                                    [routerLink]="['/admin/company',data.ID]" >
-                                                </i>
-                                                <mat-icon class="delete_icon ms-1" title="Delete" (click)="deleteItem(i)">delete_forever</mat-icon>
-                                               
+                                            <mat-icon class="sync_disabled me-1" title="Deactive"
+                                                (click)="deactive(i)">sync_disabled</mat-icon>
+                                            <mat-icon class="swap_icon me-1" title="companylogin"
+                                                (click)="companylogin(i)">swap_vert</mat-icon>
+                                            <i class="fas fa-info-circle" title="Edit"
+                                                style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
+                                                [routerLink]="['/admin/company',data.ID]">
+                                            </i>
+                                            <mat-icon class="delete_icon ms-1" title="Delete"
+                                                (click)="deleteItem(i)">delete_forever</mat-icon>
+
                                         </div>
                                     </div>
                                 </div>
@@ -74,65 +79,86 @@
                         <!-- Grid View end -->
 
                         <!-- company list start -->
-                        <div *ngIf="gridview" class="row mt-md-2 mt-5 p-md-2 p-3 ">
-                            <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
-                                <table style="width:100%;" id="exportsss"
-                                    class="table table-striped table-hover table-sm table-bordered"
-                                    style="border: 2px solid #fff !important;">
-                                    <thead class="thead-light" style="width:100%;">
-                                        <tr>
-                                            <th>Details</th>
-                                            <th class="text-left">S.No</th>
-                                            <th class="text-left"> Name</th>
-                                            <th class="text-left">OwnerName</th>
-                                            <th class="text-left">Address</th>
-                                            <th class="text-left">City</th>
-                                            <th class="text-left">Mobile</th>
-                                            <th class="text-left">Email</th>
-                                            <th class="text-left">EffectiveDate</th>
-                                            <th class="text-left">Shops</th>
-                                            <!-- <th class="text-left">Plan</th> -->
-                                            <th class="text-left">Version</th>
-                                            <th class="text-left">CacellationDate</th>
-                                            <th class="text-left">Status</th>
-                                        </tr>
-                                    </thead>
-                                    <tbody >
-                                        <tr  class="text-center" *ngFor="let data of dataList  ; let i = index;">
-                                            <td  [ngClass]="{'disabled':data.Status == 0}" style="white-space: nowrap;">
-                                                <mat-icon *ngIf="data.Status === 1" class="sync_disabled me-1" title="Deactive" (click)="deactive(i)">sync_disabled</mat-icon>
+                        <div class="body mt-md-1 mt-5 p-2">
+                            <div class="row" *ngIf="gridview">
+                              <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                                <div class="table-responsive">
+                                    <table style="width:100%;" id="exportsss"
+                                        class="table table-striped table-hover table-sm table-bordered"
+                                        style="border: 2px solid #fff !important;">
+                                        <thead class="thead-light" style="width:100%;">
+                                            <tr>
+                                                <th>Details</th>
+                                                <th class="text-left">S.No</th>
+                                                <th class="text-left"> Name</th>
+                                                <th class="text-left">OwnerName</th>
+                                                <th class="text-left">Address</th>
+                                                <th class="text-left">City</th>
+                                                <th class="text-left">Mobile</th>
+                                                <th class="text-left">Email</th>
+                                                <th class="text-left">EffectiveDate</th>
+                                                <th class="text-left">Shops</th>
+                                                <!-- <th class="text-left">Plan</th> -->
+                                                <th class="text-left">Version</th>
+                                                <th class="text-left">CacellationDate</th>
+                                                <th class="text-left">Status</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr class="text-center" *ngFor="let data of dataList  ; let i = index;">
+                                                <td [ngClass]="{'disabled':data.Status == 0}"
+                                                    style="white-space: nowrap;">
+                                                    <mat-icon *ngIf="data.Status === 1" class="sync_disabled me-1"
+                                                        title="Deactive" (click)="deactive(i)">sync_disabled</mat-icon>
 
-                                                <mat-icon *ngIf="data.Status === 0" class="swap_icon me-1" title="Active" (click)="activecompany(i)">sync</mat-icon>
+                                                    <mat-icon *ngIf="data.Status === 0" class="swap_icon me-1"
+                                                        title="Active" (click)="activecompany(i)">sync</mat-icon>
 
-                                                <mat-icon class="swap_icon me-1" title="companylogin" (click)="companylogin(i)" style="background: rgb(66, 171, 192);">swap_vert</mat-icon>
-                                                <i class="fas fa-info-circle" title="Edit"
-                                                    style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
-                                                    [routerLink]="['/admin/company',data.ID]" >
-                                                </i>
-                                                <mat-icon class="delete_icon ms-1" title="Delete" (click)="deleteItem(i)">delete_forever</mat-icon>
-                                               
-                                            </td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{ dataList.length - i }}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Name}}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.OwnerName }}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Address }}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.City }}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.MobileNo1 }}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Email}}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.EffectiveDate}}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.NoOfShops}}</td>
-                                            <!-- <td class="text-left">{{data.Plan}}</td> -->
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.Version}}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{data.CancellationDate }}</td>
-                                            <td class="text-left" [ngClass]="{'disabled':data.Status == 0}"> <span *ngIf="data.Status === 0">Deactive </span>
-                                                 <span *ngIf="data.Status === 1">Active </span>  
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                </table>
+                                                    <mat-icon class="swap_icon me-1" title="companylogin"
+                                                        (click)="companylogin(i)"
+                                                        style="background: rgb(66, 171, 192);">swap_vert</mat-icon>
+                                                    <i class="fas fa-info-circle" title="Edit"
+                                                        style="color: rgb(23, 23, 194); font-size: 30px; cursor: pointer;box-shadow: 2px 2px 6px #9c9795fa; border-radius: 20px;"
+                                                        [routerLink]="['/admin/company',data.ID]">
+                                                    </i>
+                                                    <mat-icon class="delete_icon ms-1" title="Delete"
+                                                        (click)="deleteItem(i)">delete_forever</mat-icon>
+
+                                                </td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">{{
+                                                    dataList.length - i }}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.Name}}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.OwnerName }}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.Address }}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.City }}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.MobileNo1 }}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.Email}}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.EffectiveDate | date:'d-MM-YYYY , h:mm a'}}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.NoOfShops }}</td>
+                                                <!-- <td class="text-left">{{data.Plan}}</td> -->
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.Version}}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}">
+                                                    {{data.CancellationDate | date:'d-MM-YYYY , h:mm a'}}</td>
+                                                <td class="text-left" [ngClass]="{'disabled':data.Status == 0}"> <span
+                                                        *ngIf="data.Status === 0">Deactive </span>
+                                                    <span *ngIf="data.Status === 1">Active </span>
+                                                </td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
                             </div>
-
                         </div>
+                     </div>
                         <!-- company list end -->
                     </div>
                 </div>
