--- a/web1/src/app/admin/company-login-history/company-login-history.component.html
+++ b/web1/src/app/admin/company-login-history/company-login-history.component.html
@@ -6,8 +6,8 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-2 col-8 p-0 ms-3">
-                                    <h2>Company Login List</h2>
+                                <div class="col-lg-1 col-md-2 col-8 p-0 ms-3">
+                                    <h2>Login History</h2>
                                 </div>
                                 <div class="col-md-2 col-1 ps-md-0 ps-1">
                                     <select class=" form-control"
