--- a/web1/src/app/admin/deactive-list/deactive-list.component.html
+++ b/web1/src/app/admin/deactive-list/deactive-list.component.html
@@ -7,7 +7,7 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-1 col-8 p-0 ms-3">
+                                <div class="col-xl-1 col-lg-2 col-md-2 col-8 p-0 ms-3">
                                     <h2>Deactive List</h2>
                                 </div>
                                 <div class="col-md-2 col-1 ps-md-0 ps-1">
@@ -38,8 +38,10 @@
                             </div>
                         </div>
 
-                        <div class="row mt-md-2 mt-5 p-md-2 p-3 ">
-                            <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
+                        <div class="body mt-md-1 mt-5 p-2">
+                            <div class="row">
+                              <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                                <div class="table-responsive">
                                 <table style="width:100%;" id="exportsss"
                                     class="table table-striped table-hover table-sm table-bordered"
                                     style="border: 2px solid #fff !important;">
@@ -80,6 +82,8 @@
                                         </tr>
                                     </tbody>
                                 </table>
+                            </div>
+                            </div>
                             </div>
 
                         </div>
