--- a/web1/src/app/admin/product-manage/product-manage.component.css
+++ b/web1/src/app/admin/product-manage/product-manage.component.css
@@ -12,3 +12,11 @@
     font-size: 11px;
     top: -17px;
 }
+
+.bg_none {
+    background: none;
+    border: none;
+    margin: 0;
+    padding: 0;
+    cursor: pointer;
+}
