--- a/web1/src/app/admin/product-master/product-master.component.html
+++ b/web1/src/app/admin/product-master/product-master.component.html
@@ -13,7 +13,7 @@
                     <div class="body">
                         <form  #f="ngForm" autocomplete="off">
                             <div class="row">
-                                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 mb-0">
+                                <div class="col-xl-2 col-lg-2 col-md-4 col-sm-2 mb-0">
                                     <mat-form-field class="example-full-width mb-0">
                                         <mat-label>Product</mat-label>
                                         <mat-select name="FieldType" [(ngModel)]="selectedProduct" (selectionChange)="getFieldList()"  required
@@ -44,17 +44,20 @@
                                                 {{spec.FieldName}} is Required
                                             </mat-error>
                                         </mat-form-field>
-                                    </div>
-                                        <div class="col-xl-2 col-lg-2 col-md-4 col-4 " *ngIf="spec.FieldType === 'DropDown'">
                                         <mat-form-field  *ngIf="spec.DisplayAdd === 1" >
                                             <mat-label>Add {{spec.FieldName}}</mat-label>
                                             <input matInput name="{{spec.FieldName}}" [(ngModel)]="spec.SelectedValue"
                                                 required
                                                 #NewProductTypecontrol>
                                         </mat-form-field>
-                                        
-                                        <mat-icon class="col-white plus_icon" *ngIf="spec.DisplayAdd === 0"  (click)="displayAddField(i)">add</mat-icon>
-                                        <mat-icon class="delete_icon me-2 ms-2" *ngIf="spec.DisplayAdd === 0" (click)="deleteSpecValue(spec, spec.SelectedValue, i)">delete_forever</mat-icon>
+                                    </div>
+                                        <div class="col-xl-2 col-lg-2 col-md-4 col-4 " *ngIf="spec.FieldType === 'DropDown'">
+                                        <button class="bg_none" *ngIf="spec.DisplayAdd === 0"  (click)="displayAddField(i)">
+                                            <mat-icon class="col-white plus_icon" >add</mat-icon>
+                                        </button>
+                                        <button class="bg_none" [disabled]="spec.SelectedValue === ''" *ngIf="spec.DisplayAdd === 0" (click)="deleteSpecValue(spec, spec.SelectedValue, i)">
+                                            <mat-icon class="delete_icon me-2 ms-2" >delete_forever</mat-icon>
+                                        </button>
                                         <button mat-mini-fab color="primary" *ngIf="spec.DisplayAdd === 1" (click)="saveFieldData(i)"
                                             aria-label="Example icon button with a bookmark icon">
                                             <mat-icon>save</mat-icon>
