--- a/web1/src/app/admin/user-update-password/user-update-password.component.html
+++ b/web1/src/app/admin/user-update-password/user-update-password.component.html
@@ -6,7 +6,7 @@
                     <div class="card p-0">
                         <div class="header p-2 py-0 pt-1">
                             <div class="row">
-                                <div class="col-md-1 col-12 p-0 ms-3">
+                                <div class="col-md-1 col-8 p-0 ms-3">
                                     <h2>User List</h2>
 
                                 </div>
@@ -38,7 +38,7 @@
                         <!-- Grid View start -->
                         <div class="row mt-5 mt-md-4" *ngIf="dataList?.length !== 0 && !gridview"
                             style="overflow:auto;height:530px;">
-                            <div class="col-md-3" *ngFor="let data of dataList let i = index;">
+                            <div class="col-xl-3 col-lg-4 col-md-6" *ngFor="let data of dataList let i = index;">
                                 <div class="course-card" style="height: 28rem;">
                                     <div class="course-card-body">
                                         <div class="course-card-top-overflow text-white">
@@ -61,8 +61,10 @@
                         </div>
                         <!-- Grid View end -->
                         <!-- user list strat -->
-                        <div class="row mt-md-2 mt-5 p-md-2 p-3 " *ngIf="gridview">
-                            <div style="overflow-x:auto;overflow:auto;height:530px; " class="table-responsive">
+                        <div class="body mt-md-1 mt-5 p-2">
+                            <div class="row" *ngIf="gridview">
+                              <div class="col-sm-12" style="overflow: auto; height: 530px;">
+                                <div class="table-responsive">
                                 <table style="width:100%;" id="exportsss"
                                     class="table table-striped table-hover table-sm table-bordered"
                                     style="border: 2px solid #fff !important;">
@@ -85,7 +87,7 @@
                                                 <i class="fas fa-info-circle"
                                                     style="color: rgb(23, 23, 194); font-size: 20px; cursor: pointer;"
                                                     data-mdb-toggle="modal" data-mdb-target="#exampleModal"
-                                                    (click)="openModal(content,data.ID)">
+                                                    (click)="openModal(content,data)">
                                                 </i>
                                             </td>
                                             <td class="text-left">{{dataList.length - i }}</td>
@@ -100,6 +102,8 @@
                                     </tbody>
                                 </table>
                             </div>
+                        </div>
+                        </div>
                         </div>
                         <!-- user list end -->
                     </div>
@@ -116,9 +120,12 @@
     </div>
     <div class="modal-body">
         <form #f="ngForm">
-            <div class="modal-body">
+          
                 <div class="row">
-                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto">
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-10 mb-0 mx-auto">
+                        <h4 style="color:#ff5100;font-weight: bolder;">UserName/ID - {{loginName}}</h4>
+                    </div>
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-10 mb-0 mx-auto">
                         <mat-form-field class="example-full-width mb-0">
                             <mat-label>Enter Password</mat-label>
                             <input #x matInput type="password" name="Password" [(ngModel)]="data.Password" required
@@ -130,7 +137,7 @@
                             </mat-error>
                         </mat-form-field>
                     </div>
-                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-12 mb-0 mx-auto">
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-10 mb-0 mx-auto">
                         <mat-form-field class="example-full-width mb-0">
                             <mat-label>Confirm Password</mat-label>
                             <input #y matInput type="password" name="ConfirmPassword" [(ngModel)]="ConfirmPassword"
@@ -143,7 +150,7 @@
                         </mat-form-field>
                     </div>
                 </div>
-            </div>
+           
             <div class="modal-footer">
                 <button type="button" mat-raised-button color="primary" [disabled]="!f.valid"
                     (click)="UpdatePassword()">Update</button>
